linea de botones

--- a/lang/locales/en.json
+++ b/lang/locales/en.json
@@ -35,7 +35,7 @@
             "contact": "Contacto",
             "ourPress": "Nuestra Prensa",
             "checkout": "Revisa",
-            "myAccount": "Mi cuentat",
+            "myAccount": "Mi cuenta",
             "shop": "Tienda"
         }
     },
@@ -52,67 +52,41 @@
             "homeAutoParts": "Inicio Autopartes",
             "homeTechnology": "Tecnología para el hogar",
             "homeOrganic": "Inicio Orgánico",
-            "homeMarketplaceV1": "Inicio Marketplace V1",
-            "homeMarketplaceV2": "Inicio Marketplace V2",
-            "homeMarketplaceV3": "Inicio Marketplace V3",
-            "homeMarketplaceV4": "Inicio Marketplace V4",
             "homeElectronic": "Hogar Electrónico",
             "homeFurniture": "Muebles del hogar",
             "shop": "Tienda",
-            "catalogPages": "Páginas del catálogo",
-            "shopDefault": "Comprar por defecto",
-            "shopFullwidth": "Comprar ancho completo",
-            "shopCategories": "Categorías de la tienda",
-            "shopSidebar": "Barra lateral de la tienda",
-            "shopWithoutBanner": "Comprar sin banner",
-            "shopCarousel": "Carrusel de la tienda",
-            "productLayout": "Disposición del producto",
-            "default": "Defecto",
-            "extended": "Extendido",
-            "fullContent": "Contenido completo",
-            "boxed": "En caja",
-            "sidebar": "Barra lateral",
-            "fullwidth": "Ancho completo",
-            "productTypes": "Tipos de producto",
-            "simple": "Sencillo",
-            "imagesSwatches": "Muestras de imágenes",
-            "countdown": "cuenta regresiva",
-            "affiliate": "Afiliado",
-            "onSale": "En venta",
-            "videoFeatured": "Característica de videod",
-            "grouped": "Agrupado ",
-            "outOfStock": "Agotado",
-            "ecomercePages": "Páginas de Ecomerce",
-            "shoppingCart": "Carrito de compras",
-            "checkout": "Revisa",
-            "whishlist": "Lista de deseos",
-            "compare": "Comparar",
-            "orderTracking": "Rastreo de orden",
-            "myAccount": "Mi cuenta",
-            "loginOrregister": "Iniciar sesión / Registrarse",
+
+            "catalogPages": "",
+            "shopDefault": "> Comprar por defecto",
+            "shopWithoutBanner": "> Comprar sin banner",
+
+            "ecomercePages": "",
+            "shoppingCart": "> Carrito de compras",
+            "checkout": "> Revisa",
+            "whishlist": "> Lista de deseos",
+            "compare": "> Comparar",
+            "orderTracking": "> Rastreo de orden",
+            "myAccount": "> Mi cuenta",
+            "loginOrregister": "> Iniciar sesión / Registrarse",
             "pages": "Paginas",
-            "basicPage": "Página básica",
+            "basicPage": "",
             "aboutUs": "Sobre nosotros",
             "contact": "Contacto",
             "faqs": "Preguntas frecuentes",
-            "404": "404 Página",
-            "vendorPages": "Páginas de proveedores",
-            "becomeAVendor": "Conviértete en vendedor",
-            "vendorStore": "Tienda del vendedor",
-            "storeList": "Lista de la tienda",
-            "storeList2": "Lista de tiendas 2",
+            "politics": "Politicas",
+            "TermCon":"Terminos y condicones",
+            "vendorPages": "",
+            "vendorStore": "Armar canasta",
+            
             "blogs": "Blogs",
-            "blogLayout": "Diseño del blog",
-            "grid": "Cuadrícula",
-            "list": "Lista",
+            "blogLayout": "",
+            "grid": "Blog",
+            
             "smallThumb": "Pulgar pequeño",
             "leftSidebar": "Barra lateral izquierda",
             "rightSidebar": "Barra lateral derecha",
-            "singleBlog": "Blog único",
-            "single1": "Soltero 1",
-            "single2": "Soltero 2",
-            "single3": "Soltero 3",
-            "single4": "Soltero 4"
+            "singleBlog": "Blog único"
+    
         },
         "menuCategories": {
             "hotPromotions": "Promociones calientes",
