--- a/lang/locales/en.json
+++ b/lang/locales/en.json
@@ -57,17 +57,17 @@
             "shop": "Tienda",
 
             "catalogPages": "",
-            "shopDefault": "> Comprar por defecto",
-            "shopWithoutBanner": "> Comprar sin banner",
+            "shopDefault": "Comprar por defecto",
+            "shopWithoutBanner": "Comprar sin banner",
 
             "ecomercePages": "",
-            "shoppingCart": "> Carrito de compras",
-            "checkout": "> Revisa",
-            "whishlist": "> Lista de deseos",
-            "compare": "> Comparar",
-            "orderTracking": "> Rastreo de orden",
-            "myAccount": "> Mi cuenta",
-            "loginOrregister": "> Iniciar sesión / Registrarse",
+            "shoppingCart": "Carrito de compras",
+            "checkout": "Revisa",
+            "whishlist": "Lista de deseos",
+            "compare": "Comparar",
+            "orderTracking": "Rastreo de orden",
+            "myAccount": "Mi cuenta",
+            "loginOrregister": "Iniciar sesión / Registrarse",
             "pages": "Paginas",
             "basicPage": "",
             "aboutUs": "Sobre nosotros",
