login funcionando ...status

--- a/lang/locales/en.json
+++ b/lang/locales/en.json
@@ -1,7 +1,7 @@
 {
     "header": {
         "shopByDepartment": "Comprar por departamento",
-        "wellcomeText": "¡Bienvenido a la tienda de compras en línea de Martfury!",
+        "wellcomeText": "¡Bienvenido a la tienda de compras en línea de Arcones y Canastas!",
         "login": "Acceso",
         "register": "Registrarse",
         "navigationExtra": {
