--- a/lang/locales/en.json
+++ b/lang/locales/en.json
@@ -3,7 +3,7 @@
         "shopByDepartment": "Comprar por departamento",
         "wellcomeText": "¡Bienvenido a la tienda de compras en línea de Arcones y Canastas!",
         "login": "Acceso",
-        "register": "Registrarse",
+        "register": "Registro",
         "navigationExtra": {
             "sellOnMartfury": "Vender en Martfury",
             "trackYourOrder": "Rastrea tu orden"
